<resources>
    <string name="app_name">About Me</string>
    <string name="name">Benedikt Conrad</string>
    <string name="yellow_star">Yellow star</string>

    <string name="bio">Hi, my name is Benedikt.
\n\nI love gaming.
\n\nI usually play mostly on the console.
\n\nI like games where every decision has its own consequence.
\n\nBut first-person shooters in multi-player mode against other players online are awesome too.
\n\nAn open world in single player games is really cool and make always fun.
\n\nBut also completely chaotic games where you only make shit can be very amusing.
\n\nAnd if a game gets too boring as hell, then you can pimp it with modifications.</string>
    <string name="what_is_your_nickname">What is your Nickname?</string>
    <string name="done">Done</string>

</resources>