<?xml version="1.0" encoding="utf-8"?>

<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>
        <variable
            name="myName"
            type="android.example.aboutme2.MyName" />
    </data>

    <LinearLayout
        android:layout_height="match_parent"
        android:layout_width="match_parent"
        android:orientation="vertical"
        android:paddingEnd="@dimen/padding"
        android:paddingStart="@dimen/padding">

        <TextView
            android:id="@+id/name_text"
            style="@style/NameStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/roboto"
            android:text="@string/name"
            android:textAlignment="center" />

        <EditText
            style="@style/NameStyle"
            android:ems="10"
            android:hint="@string/what_is_your_nickname"
            android:id="@+id/nickname_edit"
            android:inputType="textMultiLine|textPersonName"
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:textAlignment="center" />

        <Button
            style="@style/Widget.AppCompat.Button.Colored"
            android:id="@+id/done_button"
            android:layout_gravity="center_horizontal"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/layout_margin"
            android:layout_width="match_parent"
            android:text="@string/done" />

        <TextView
            style="@style/NameStyle"
            android:id="@+id/nickname_text"
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:textAlignment="center"
            android:visibility="gone"
            android:text="@={myName.nickname}"/>

        <ImageView
            android:contentDescription="@string/yellow_star"
            android:id="@+id/star_image"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/layout_margin"
            android:layout_width="match_parent"
            app:srcCompat="@android:drawable/btn_star_big_on" />

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="496dp">

            <TextView
                android:id="@+id/bio_text"
                style="@style/NameStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/bio" />
        </ScrollView>
    </LinearLayout>
</layout>
